One more todo list item

--- a/todo.txt
+++ b/todo.txt
@@ -7,3 +7,4 @@ TODO:
  - Fix rewrite functionality in .htaccess
  - Add content!
  - Implement ability for redirects (read from config file)
+ - Add functions for getting lists of content
